--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@oclif/config": "^1",
     "@oclif/plugin-help": "^2",
     "fs-extra": "^8.1.0",
-    "klaw": "^3.0.0",
     "klaw-sync": "^6.0.0",
     "tslib": "^1"
   },
@@ -21,7 +20,6 @@
     "@oclif/tslint": "^3",
     "@types/chai": "^4",
     "@types/fs-extra": "^8.0.0",
-    "@types/klaw": "^3.0.0",
     "@types/klaw-sync": "^6.0.0",
     "@types/mocha": "^5",
     "@types/node": "^10",
@@ -37,7 +35,8 @@
   },
   "files": [
     "/bin",
-    "/lib"
+    "/lib",
+    "/template"
   ],
   "homepage": "https://github.com/tormenteddan/pandoc-readme",
   "keywords": [
